feat: add functionality to mark favourite phrases as learned
